# qml-calculator

./: .gitmodules  CMakeLists.txt  main.cpp  resources.qrc
resources/: main.qml
